--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -43,10 +43,9 @@
 
 
 
-.navbar{
+.navbar-m{
     width: 90%;
     height: 80px;
-    /* padding: 10px; */
     background-color: white;
     box-shadow: 0px 0px 10px rgba(156, 156, 156, 0.222);
     margin: auto;
