--- a/client/src/Components/Contact.module.css
+++ b/client/src/Components/Contact.module.css
@@ -113,7 +113,7 @@
     }
 
     .sendbutton {
-        bottom: -5%;
+        bottom: 0;
     }
 }
 
@@ -128,32 +128,30 @@
     }
 
     .sendbutton {
-        bottom: -5%;
+        bottom: 0;
         width: 12vw;
     }
 }
 
 @media (max-width:662px) {
     .Container_Contact {
-        height: 180vh;
+        height: 145vh;
     }
-
     .Main_contact {
         width: 500px;
-        height: 150vh;
-        background-color: red;
+        height: 120vh;
     }
 
     .Detail_contact {
         left: 0;
         width: 100%;
-        height: 75vh;
+        height: 55vh;
         top: 0;
     }
 
     .Form_box {
         left: 0;
-        top: 76vh;
+        top: 45vh;
         width: 100%;
         height: 70vh;
     }
@@ -165,16 +163,27 @@
 
 @media (max-width:520px) {
     .Container_Contact {
-        height: 160vh;
+        height: 150vh;
     }
     .Main_contact {
         width: 400px;
-        height: 150vh;
-        background-color: red;
+        height: 110vh;
+        margin-top: -30%;
+    }
+    .Detail_contact {
+        left: 0;
+        width: 100%;
+        height: 50vh;
+        top: 0;
+    }
+    .Form_box {
+        left: 0;
+        top: 41vh;
+        width: 100%;
     }
     .sendbutton {
         width: 20vw;
-        bottom: 0;
+        bottom: 5%;
     }
 }
 
@@ -185,7 +194,6 @@
     .Main_contact {
         width: 300px;
         height: 105vh;
-        background-color: red;
     }
     .Detail_contact {
         left: 0;
@@ -214,7 +222,6 @@
     .Main_contact {
         width: 250px;
         height: 110vh;
-        background-color: red;
     }
     .Detail_contact {
         left: 0;
