--- a/client/src/Components/Contact.module.css
+++ b/client/src/Components/Contact.module.css
@@ -16,7 +16,7 @@
 }
 
 .Detail_contact {
-    height: 85%;
+    height: max-content;
     position: absolute;
     left: -8%;
     top: 7.5%;
@@ -58,7 +58,6 @@
     margin: 10px;
     margin-top: 0px;
     cursor: pointer;
-
 }
 
 .SocialContact {
@@ -67,8 +66,9 @@
     margin-left: 15%;
     margin-top: 20px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    margin: 30px;
 }
 
 .cont_Social {
