--- a/client/src/Components/Contact.module.css
+++ b/client/src/Components/Contact.module.css
@@ -16,7 +16,7 @@
 }
 
 .Detail_contact {
-    height: max-content;
+    height: 85%;
     position: absolute;
     left: -8%;
     top: 7.5%;
@@ -41,13 +41,16 @@
 }
 
 .Detail_box {
-    width: 300px;
     display: flex;
     padding: 5px;
     justify-content: space-between;
 }
+.lis_contact{
+    display: flex;
+}
 
 .Details_li {
+    margin-left:5px;
     list-style: none;
     width: max-content;
     cursor: pointer;
@@ -55,8 +58,8 @@
 
 .Location_icon {
     font-size: 1.3em;
-    margin: 10px;
-    margin-top: 0px;
+    margin-right: 10px;
+    margin-top:2.5px;
     cursor: pointer;
 }
 
