add section in footer

--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -7,6 +7,9 @@
     --primary-dark: rgb(25,67,118);
     --primary-light: rgb(70,198,206);
     --primary-gray: rgb(167, 153, 153);
+    --light-gray:rgb(214, 205, 205);
+    --Heading:'Bebas Neue', cursive;    
+    --Para:'Asap Condensed', sans-serif;  
 }
 .nav_nav{
     height: 120px;
