--- a/client/src/Components/Footer.module.css
+++ b/client/src/Components/Footer.module.css
@@ -1,5 +1,6 @@
 .MainFooter {
     background-color: var(--primary-dark);
+    padding:2% 5% 0;
 }
 .footer{
     display: flex;
@@ -9,19 +10,7 @@
     height: max-content;
 }
 
-.Box:nth-child(2) {
-    margin-left: 0;
-}
 
-.Box:nth-child(3) {
-    /* width: 300px; */
-    margin-left: 0;
-}
-
-.Box:nth-child(4) {
-    margin-left: 0;
-    /* width: 340px; */
-}
 
 .Footer_logo {
     height: 20%;
@@ -53,7 +42,7 @@
     width: 170px;
     height: 50px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -167,8 +156,7 @@
 
 .footerhr {
     height: 2px;
-    width: 90%;
-    margin-left: 5%;
+    width: 100%;
     color: white;
 }
 
@@ -182,9 +170,24 @@
     .Box {
         height: max-content;
     }
-    /* .Box:nth-child(4) {
-        width: max-content;
+    /* .Box:nth-child(2) {
+        margin: 0;
+    }
+    
+    .Box:nth-child(3) {
+        margin-left: 0;
+    }
+    
+    .Box:nth-child(4) {
+        margin-left: 0;
     } */
+    
+}
+
+@media (max-width:767px){
+    .Box{
+        width: 60%;
+    }
 }
 
 @media (max-width:460px) {
