--- a/client/src/Components/Services.module.css
+++ b/client/src/Components/Services.module.css
@@ -13,7 +13,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px 0px 15px 0px
+    padding: 15px 0px 15px 0px;
+    /* border: solid 1px black; */
 }
 
 .border{
@@ -22,14 +23,16 @@
 }
 
 .main{
-    height: 45vh;
+    height: 40vh;
     cursor: pointer;
-    width:85% ;
+    width:70% ;
     display: flex;
     align-items: center;
     flex-direction: column;
     transition: all ease-out 0.15s;
     top: 2rem;
+    transition: linear 0.40s;
+    /* border: solid 1px black; */
 
 
 }
