--- a/client/src/Components/Services.module.css
+++ b/client/src/Components/Services.module.css
@@ -1,5 +1,9 @@
 
-
+.par{
+    width: 100vw;
+    height: max-content;
+    background-color: rgb(238, 235, 235);
+}
 
 /* 
 :root{
@@ -13,7 +17,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px 0px 15px 0px;
     /* border: solid 1px black; */
 }
 
@@ -25,7 +28,7 @@
 .main{
     height: 40vh;
     cursor: pointer;
-    width:70% ;
+    width:90% ;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -33,8 +36,11 @@
     top: 2rem;
     transition: linear 0.40s;
     /* border: solid 1px black; */
+    margin-top: 10%;
+    margin-bottom: 8%;
 
-
+   
+  
 }
 
 .main:hover{
