--- a/client/src/Components/Courses.module.css
+++ b/client/src/Components/Courses.module.css
@@ -41,7 +41,7 @@
 }
 .courses_info p:nth-child(2){
     font-family: var(--Para);
-    color: blue;
+    color: var(--secondary-light);
     font-size: 1.5em;
     margin: -5px 0 10px 70px;
     font-weight: bold;
@@ -62,6 +62,9 @@
     flex-wrap: wrap;
     justify-content: flex-start;
 }
+.courses_info_icons{
+    color: var(--primary-light);
+}
 .courses_bullets > div{
     position: relative;
     width: max-content;
@@ -80,7 +83,7 @@
     width: 10px;
     border-radius: 0 7px 7px 0;
     height: 100%;
-    background-color: blue;
+    background-color: var(--secondary-light);
 }
 .courses_St{
     display: flex;
@@ -116,6 +119,12 @@
 }
 .courses_St_Info1{
     margin-right: 20px;
+}
+.courses_St_Info1 p span{
+    color: var(--secondary-light);
+}
+.courses_St_Info2 p span{
+    color: var(--secondary-light);
 }
 .courses_St_Info1 p:nth-child(1){
     color: #999;
@@ -164,5 +173,5 @@
     border-radius: 5px;
     cursor: pointer;
     color: white;
-    background: linear-gradient(45deg, rgb(77, 77, 245) 80%,white);
+    background: linear-gradient(45deg, var(--primary-light) 80%,white);
 }
