--- a/client/src/Components/SignUp.module.css
+++ b/client/src/Components/SignUp.module.css
@@ -1,6 +1,5 @@
 .Main_Signup {
     height: 100vh;
-    border: 1px solid;
     background-image: url(https://fjwp.s3.amazonaws.com/blog/wp-content/uploads/2020/01/09151859/coding-bootcamp-1024x486.png);
     background-position: center;
     background-size: cover;
@@ -18,12 +17,32 @@
     background-color: var(--primary-dark);
     opacity: .8;
 }
-
+.AlertDiv{
+    height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.6em;
+    color: var(--primary-dark);
+}
 .Signupform {
     position: absolute;
-    height: 500px;
+    height: 550px;
     width: 400px;
     backdrop-filter: blur(5px);
-    background-color: rgba(245, 245, 245, 0.727);
+    background-color: rgba(245, 245, 245);
     border-radius: 5px;
+}
+.SignUpFormm{
+    width: 80%;
+    margin-left: 10%;
+}
+.Upbtn{
+    position: absolute;
+    right: 10%;
+    text-transform: uppercase;
+}
+.Label{
+    color: var(--primary-dark);
 }
