--- a/client/src/Components/Courses.module.css
+++ b/client/src/Components/Courses.module.css
@@ -163,7 +163,7 @@
     color: #999;
     margin: 0 10px;
 }
-.courses_St_btn{
+/* .courses_St_btn{
     position: absolute;
     bottom: 30px;
     left: 30px;
@@ -173,5 +173,27 @@
     border-radius: 5px;
     cursor: pointer;
     color: white;
+    transition: all 1s linear;
+    background: linear-gradient(45deg,var(--secondary-light),var(--primary-light) 95%);
+}
+.courses_St_btn:hover{
+    transition: all 1s linear;
     background: linear-gradient(45deg,var(--secondary-light),var(--primary-light) 80%);
+} */
+.courses_St_btn{
+    position: absolute;
+    padding: 10px 20px;
+    bottom: 30px;
+    left: 30px;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    background-size: 300% 100%;
+    background-image: linear-gradient(45deg, #25aae1, #4481eb, #04befe, #3f86ed);
+    border-radius: 5px;
+    transition: all .4s ease-in-out;
+}
+.courses_St_btn:hover {
+    background-position: 100% 0;
+    transition: all .4s ease-in-out;
 }
