--- a/client/src/Components/SignUp.module.css
+++ b/client/src/Components/SignUp.module.css
@@ -23,8 +23,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
+}
+.Uphead{
     font-size: 1.6em;
     color: var(--primary-dark);
+    font-weight: bold;
 }
 .Signupform {
     position: absolute;
@@ -52,4 +56,7 @@
     cursor: pointer;
     position: absolute;
     bottom: 3%;
+}
+.Plachold::placeholder{
+    font-size: 13px;
 }
