--- a/client/src/Components/Login.module.css
+++ b/client/src/Components/Login.module.css
@@ -51,3 +51,11 @@
     left: 20%;
     width: 60%;
 }
+.LoginAlready{
+    font-size: 14px;
+    color: var(--primary-dark);
+    cursor: pointer;
+    position: absolute;
+    bottom: 0;
+    left: 25%;
+}
