--- a/client/src/Components/Courses.module.css
+++ b/client/src/Components/Courses.module.css
@@ -12,6 +12,7 @@
     position: sticky;
     top: 0;
     height: 100vh;
+    border: 1px solid ;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,7 +25,7 @@
 }
 .courses_info ul li{
     margin: 10px 0;
-    width: max-content;
+    width: 100%;
     list-style: none;
     font-size: 1.1em;
     display: flex;
@@ -37,6 +38,7 @@
 .courses_info p:nth-child(1){
     font-family: var(--Heading);
     font-size:3em;
+    background-color: red;
     letter-spacing: 2px;
 }
 .courses_info p:nth-child(2){
@@ -51,7 +53,6 @@
     color: #999;
     font-size: 1.1em;
     font-weight: lighter;
-    padding-right: 50px;
 }
 .courses_bullets{
     width: 80%;
@@ -86,6 +87,7 @@
     background-color: var(--secondary-light);
 }
 .courses_St{
+    border: 1px solid;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -163,23 +165,6 @@
     color: #999;
     margin: 0 10px;
 }
-/* .courses_St_btn{
-    position: absolute;
-    bottom: 30px;
-    left: 30px;
-    padding: 10px 20px;
-    border: none;
-    background-color: transparent;
-    border-radius: 5px;
-    cursor: pointer;
-    color: white;
-    transition: all 1s linear;
-    background: linear-gradient(45deg,var(--secondary-light),var(--primary-light) 95%);
-}
-.courses_St_btn:hover{
-    transition: all 1s linear;
-    background: linear-gradient(45deg,var(--secondary-light),var(--primary-light) 80%);
-} */
 .courses_St_btn{
     position: absolute;
     padding: 10px 20px;
@@ -188,12 +173,32 @@
     color: #fff;
     cursor: pointer;
     border: none;
-    background-size: 300% 100%;
-    background-image: linear-gradient(45deg, #25aae1, #4481eb, #04befe, #3f86ed);
+    background-size:300% 100%;
+    background-image: linear-gradient(45deg, var(--primary-light), var(--secondary-light),#04befe);
     border-radius: 5px;
     transition: all .4s ease-in-out;
 }
 .courses_St_btn:hover {
-    background-position: 100% 0;
+    background-position:100% 0;
     transition: all .4s ease-in-out;
+}
+
+@media screen and (max-width: 1225px) {
+    .courses_St1{
+        height: 90%;
+    }
+    .courses_info p{
+        margin: 0 30px;
+    }   
+    .courses_info p:nth-child(2){
+        margin: -5px 0 10px 30px;
+    }
+    .courses_info ul{
+        margin: 10px 0;
+    }
+    .courses_bullets{
+        width: 90%;
+        background-color: red;
+        margin: 0 20px;
+    }
 }
