--- a/client/src/Components/Courses.module.css
+++ b/client/src/Components/Courses.module.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Asap+Condensed&family=Baloo+2&family=Bebas+Neue&family=Righteous&display=swap');
-:root{
-    --Heading:'Bebas Neue', cursive;    
-    --Para:'Asap Condensed', sans-serif;    
-}
 .courses_container{
     left: 0;
     height: 400vh;
@@ -37,9 +31,10 @@
 }
 .courses_info p:nth-child(1){
     font-family: var(--Heading);
-    font-size:3em;
-    background-color: red;
-    letter-spacing: 2px;
+    font-size:2.5em;
+    font-weight: bold;
+    /* background-color: red; */
+    /* letter-spacing: 2px; */
 }
 .courses_info p:nth-child(2){
     font-family: var(--Para);
