--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Asap+Condensed&family=Baloo+2&family=Bebas+Neue&family=Cairo&family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Asap+Condensed&family=Baloo+2&family=Bebas+Neue&family=Righteous&display=swap');
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
-body{
-  font-family: Arial, Helvetica, sans-serif;
+:root{
+  --primary-dark: rgb(25,67,118);
+  --secondary-dark: rgb(8, 110, 235);
+  --secondary-light: blue;
+  --primary-light: rgb(70,198,206);
+  --primary-gray: rgb(167, 153, 153);
+  --light-gray:rgb(214, 205, 205);
+  --facbook-color:rgb(59, 89, 152); 
+  --Twitter-color:rgb(85, 172, 238);
+  --Google-color:rgb(221, 75, 57);
+  --Telegram-color:rgb(255,94,20);
+  --Heading:'Cairo', sans-serif; 
+  --Para:'Asap Condensed', sans-serif;    
 }
