--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -3,6 +3,8 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400&display=swap');
+
 :root{
     --primary-dark: rgb(25,67,118);
     --secondary-dark: rgb(8, 110, 235);
@@ -16,6 +18,7 @@
     --Twitter-color:rgb(85, 172, 238);
     --Google-color:rgb(221, 75, 57);
     --Telegram-color:rgb(255,94,20);
+    --Cario-fontFamily: 'Cairo', sans-serif;
 }
 .nav_nav{
     height: 120px;
