--- a/client/src/Components/Login.module.css
+++ b/client/src/Components/Login.module.css
@@ -50,6 +50,18 @@
     position: absolute;
     left: 20%;
     width: 60%;
+    border: none;
+    background-size:300% 100%;
+    background-image: linear-gradient(45deg, var(--primary-light), var(--secondary-light),#04befe);
+    border-radius: 5px;
+    transition: all .4s ease-in-out;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+}
+.LoginBtn:hover{
+    background-position:100% 0;
+    transition: all .4s ease-in-out;
 }
 .LoginAlready{
     font-size: 14px;
