--- a/client/src/Components/SignUp.module.css
+++ b/client/src/Components/SignUp.module.css
@@ -48,6 +48,18 @@
     position: absolute;
     right: 10%;
     text-transform: capitalize;
+    border: none;
+    background-size:300% 100%;
+    background-image: linear-gradient(45deg, var(--primary-light), var(--secondary-light),#04befe);
+    border-radius: 5px;
+    transition: all .4s ease-in-out;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+}
+.Upbtn:hover{
+    background-position:100% 0;
+    transition: all .4s ease-in-out;    
 }
 .Label{
     color: var(--primary-dark);
