--- a/client/src/Components/Courses.module.css
+++ b/client/src/Components/Courses.module.css
@@ -6,7 +6,7 @@
     position: sticky;
     top: 0;
     height: 100vh;
-    border: 1px solid ;
+    /* border: 1px solid ; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,21 +30,20 @@
     margin: 0 10px;
 }
 .courses_info p:nth-child(1){
-    font-family: var(--Heading);
+    font-family: var(--Heading-fonts);
     font-size:2.5em;
     font-weight: bold;
     /* background-color: red; */
-    /* letter-spacing: 2px; */
 }
 .courses_info p:nth-child(2){
-    font-family: var(--Para);
+    font-family: var(--Para-fonts);
     color: var(--secondary-light);
     font-size: 1.5em;
     margin: -5px 0 10px 70px;
     font-weight: bold;
 }
 .courses_info p:nth-child(3){
-    font-family: var(--Para);
+    font-family: var(--Para-fonts);
     color: #999;
     font-size: 1.1em;
     font-weight: lighter;
@@ -82,7 +81,7 @@
     background-color: var(--secondary-light);
 }
 .courses_St{
-    border: 1px solid;
+    /* border: 1px solid; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -96,8 +95,7 @@
     border-radius: 5px;
 }
 .courses_St_Heading{
-    font-family: var(--Heading);
-    font-size: 1.5em;
+    font-family: var(--Heading-fonts);
     letter-spacing: 1px;
     margin: 30px 0 0 20px;
 }
