--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,8 @@
   --Twitter-color:rgb(85, 172, 238);
   --Google-color:rgb(221, 75, 57);
   --Telegram-color:rgb(255,94,20);
-  --Heading:'Cairo', sans-serif; 
-  --Para:'Asap Condensed', sans-serif;    
+  --Heading-fonts:'Cairo', sans-serif; 
+  --Para-fonts:'Asap Condensed', sans-serif;  
+  --main-heading-size:'2.5em';
+  --sub-heading-size:'1.5em';  
 }
