add buttons to projects

--- a/client/src/Components/Projects.module.css
+++ b/client/src/Components/Projects.module.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap');
 .heading{
     margin: 5px 5%;
-    font-family: var(--Cario-fontFamily);
+    font-family: var(--Heading-fonts);
 }
 .para{
     margin: 0 5%;
@@ -22,6 +21,9 @@
     align-items: center;
     flex-wrap: wrap;
 }
+.card_para:nth-child(3){
+    color: rgb(118, 108, 108);
+}
 .card_para{
     color: var(--primary-gray);
 }
@@ -36,7 +38,7 @@
     color: #fff;
     cursor: pointer;
     font-size: 14px;
-    margin-left: 5px;    
+    margin-left: 5px;
     border: none;
     background-size:300% 100%;
     background-image: linear-gradient(45deg, var(--primary-light), var(--secondary-light),#04befe);
